# github-usage

./: .dockerignore  .env.example  .gitignore  Dockerfile  GitVersion.yml  PERFORMANCE_AUDIT.md  README.md  docker-bake.hcl  docker-compose.yml  eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/instructions/: ai-model-brands.instructions.md  examples.instructions.md
.github/workflows/: ci.yml  deploy.yml  release.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  reports.py  scheduler.py  schedules.py  store.py
backend/app/github/: __init__.py  auth.py  client.py  csv_render.py
backend/app/notify/: __init__.py  dispatch.py  email.py  slack.py  summary.py  teams.py
backend/tests/: test_api.py  test_client.py  test_config.py  test_csv_render.py  test_reports.py  test_schedules.py  test_store.py  test_summary.py
charts/github-usage-dashboard/: .helmignore  Chart.yaml  README.md  values.yaml
examples/: Token.Usage.Report.csv  export-octodemo-1774679438.csv  export-octodemo-1774709193.csv  ghas_active_committers_octodemo_2026-03-27T1521.csv  octodemo-seat-activity-1774680875.csv  premiumRequestUsageReport_1_c6fca30f0acd458098a95808eaf43399.csv  risk_assessment_export_austenstone-personal-org_1.csv
public/: 404.html  robots.txt  site.webmanifest  sitemap.xml
scripts/: anonymize-data.ts  generate-fake-data.ts
src/: App.module.css  App.tsx  global.css  index.css  main.tsx  test-setup.ts
src/__fixtures__/: premium-request-sample.csv  (+1 more)
(+80 files in other folders)
