[project]
name = "github-usage-dashboard"
version = "1.0.0"
description = "FastAPI backend that auto-fetches GitHub billing usage, serves the dashboard SPA, and delivers Slack/Teams/Email reports."
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long lines are fine in this codebase (docstrings, headers)
